--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
           <div id="navigation"><div class="section clearfix">
 
         <h2 class="element-invisible">Main menu</h2><ul id="main-menu" class="links inline clearfix"><li class="menu-218 first active"><a href="/" class="active">Home</a></li>
-<li class="menu-309"><a href="/services">Services</a></li>
-<li class="menu-310"><a href="/projects">Projects</a></li>
-<li class="menu-311"><a href="/technology">Technology</a></li>
-<li class="menu-312"><a href="/about_us">About Us</a></li>
-<li class="menu-456 last"><a href="/contact">Contact</a></li>
+<li class="menu-309"><a href="/services/">Services</a></li>
+<li class="menu-310"><a href="/projects/">Projects</a></li>
+<li class="menu-311"><a href="/technology/">Technology</a></li>
+<li class="menu-312"><a href="/about_us/">About Us</a></li>
+<li class="menu-456 last"><a href="/contact/">Contact</a></li>
 </ul>
         
       </div></div><!-- /.section, /#navigation -->
