--- a/asl_support/index.html
+++ b/asl_support/index.html
@@ -13,7 +13,7 @@
 
 <head profile="http://www.w3.org/1999/xhtml/vocab">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta about="/asl_support" property="sioc:num_replies" content="0" datatype="xsd:integer" />
+<meta about="/asl_support/" property="sioc:num_replies" content="0" datatype="xsd:integer" />
 <link rel="shortcut icon" href="http://avtechscientific.com/sites/default/files/favicon_3.png" type="image/png" />
 <meta content="ASL Support and Consulting" about="/asl_support" property="dc:title" />
 <link rel="shortlink" href="/node/16" />
@@ -130,11 +130,11 @@ Avtech Scientific offers variety of support, consulting and code customization p
           <div id="navigation"><div class="section clearfix">
 
         <h2 class="element-invisible">Main menu</h2><ul id="main-menu" class="links inline clearfix"><li class="menu-218 first"><a href="/">Home</a></li>
-<li class="menu-309"><a href="/services">Services</a></li>
-<li class="menu-310"><a href="/projects">Projects</a></li>
-<li class="menu-311"><a href="/technology">Technology</a></li>
-<li class="menu-312"><a href="/about_us">About Us</a></li>
-<li class="menu-456 last"><a href="/contact">Contact</a></li>
+<li class="menu-309"><a href="/services/">Services</a></li>
+<li class="menu-310"><a href="/projects/">Projects</a></li>
+<li class="menu-311"><a href="/technology/">Technology</a></li>
+<li class="menu-312"><a href="/about_us/">About Us</a></li>
+<li class="menu-456 last"><a href="/contact/">Contact</a></li>
 </ul>
         
       </div></div><!-- /.section, /#navigation -->
