--- a/asl_development/index.html
+++ b/asl_development/index.html
@@ -13,7 +13,7 @@
 
 <head profile="http://www.w3.org/1999/xhtml/vocab">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta about="/asl_development" property="sioc:num_replies" content="0" datatype="xsd:integer" />
+<meta about="/asl_development/" property="sioc:num_replies" content="0" datatype="xsd:integer" />
 <link rel="shortcut icon" href="http://avtechscientific.com/sites/default/files/favicon_3.png" type="image/png" />
 <meta content="Development projects for ASL" about="/asl_development" property="dc:title" />
 <link rel="shortlink" href="/node/17" />
@@ -104,7 +104,7 @@ Avtech Scientific undertakes fixed-price development projects for ASL for large 
 <li>With our extensive expertise and the flexibility of ASL, we can push the limits of current technology to simulate problems that are, as yet, unsolved.</li>
 <li>As the developers and maintainers of the official ASL software, we have a unique insight into ASL and can update developments through the continual release-cycle of ASL.</li>
 <li>By paying for open source developments instead of annual software license fees, clients quickly receive features they need in their product and pay only once.</li>
-</ul><p>For more information, please <a href="/contact">contact us</a>.
+</ul><p>For more information, please <a href="/contact/">contact us</a>.
 </p></div>
 </div></div></div>  </div>
 
@@ -120,11 +120,11 @@ Avtech Scientific undertakes fixed-price development projects for ASL for large 
           <div id="navigation"><div class="section clearfix">
 
         <h2 class="element-invisible">Main menu</h2><ul id="main-menu" class="links inline clearfix"><li class="menu-218 first"><a href="/">Home</a></li>
-<li class="menu-309"><a href="/services">Services</a></li>
-<li class="menu-310"><a href="/projects">Projects</a></li>
-<li class="menu-311"><a href="/technology">Technology</a></li>
-<li class="menu-312"><a href="/about_us">About Us</a></li>
-<li class="menu-456 last"><a href="/contact">Contact</a></li>
+<li class="menu-309"><a href="/services/">Services</a></li>
+<li class="menu-310"><a href="/projects/">Projects</a></li>
+<li class="menu-311"><a href="/technology/">Technology</a></li>
+<li class="menu-312"><a href="/about_us/">About Us</a></li>
+<li class="menu-456 last"><a href="/contact/">Contact</a></li>
 </ul>
         
       </div></div><!-- /.section, /#navigation -->
