Add 404 error message

--- a/404.html
+++ b/404.html
@@ -116,7 +116,7 @@ Sorry, we have misplaced that URL or it is pointing to something that doesn’t 
 <li class="menu-309"><a href="/services/">Services</a></li>
 <li class="menu-310"><a href="/projects/">Projects</a></li>
 <li class="menu-311"><a href="/technology/">Technology</a></li>
-<li class="menu-312 active-trail active"><a href="/about_us/" class="active-trail active">About Us</a></li>
+<li class="menu-312"><a href="/about_us/">About Us</a></li>
 <li class="menu-456 last"><a href="/contact/">Contact</a></li>
 </ul>
         
