Fix contact page

--- a/projects/index.html
+++ b/projects/index.html
@@ -114,7 +114,7 @@ Our fields of expertise include among others:
 <li>electrochemical processes</li>
 <li>elastic waves propagation</li>
 </ul><p><b>Typical projects:</b></p>
-<p><a href="/focus">Focus</a> - application assisting the process of separating mixtures of proteins in a microfluidic device.<br /><a href="/cryovision">CryoVision</a> - 3D cryoablation planning and visualization system for planning and guiding cryosurgery.<br /><a href="/brainshift">BrainShift</a> - simulation of the brain shift process during a craniotomy procedure.<br /><a href="http://asl.org.il/benchmarks">Benchmarks</a> - a collection of sample benchmarks.</p>
+<p><a href="/focus/">Focus</a> - application assisting the process of separating mixtures of proteins in a microfluidic device.<br /><a href="/cryovision/">CryoVision</a> - 3D cryoablation planning and visualization system for planning and guiding cryosurgery.<br /><a href="/brainshift/">BrainShift</a> - simulation of the brain shift process during a craniotomy procedure.<br /><a href="http://asl.org.il/benchmarks">Benchmarks</a> - a collection of sample benchmarks.</p>
 </div>
 <div style="padding-left: 20px; float:left">
 <b>Cooperation Partners</b>
