Fix contact page

--- a/contact/index.html
+++ b/contact/index.html
@@ -83,7 +83,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","pathPrefix":"","ajaxPageState":
 If you are interested in cooperation or partnership you are welcome to send us a short description of your project (of course we can sign an NDA if needed). We will create a prototype model and provide you with pictures, estimate of expected performance, project duration and costs.
 </div>
 <p>Please note, that we are not looking for webdesign, marketing or financial services - all such messages will be forwarded to a global antispam blocklist.</p>
-<p>Email: <strong>contact AT avtechscientific DOT com</strong></p>
+<p>Email: <strong>contact @ avtechscientific . com</strong></p>
 <p>Avtech Scientific<br />
 P.O. Box 10432<br />
 Modiin Illit, 7183834<br />
